--- a/nginx.conf
+++ b/nginx.conf
@@ -10,4 +10,28 @@ server {
     }
 
     client_max_body_size 100M;
+
+    # Gzip Compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript application/x-font-ttf font/opentype image/svg+xml;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_buffers 16 8k;
+    gzip_comp_level 6;
+    gzip_http_version 1.1;
+    gzip_proxied any;
+
+    # Leverage browser caching for static files
+    location ~* \.(ico|svg|woff|woff2|ttf|otf|eot)$ {
+        expires 3d;
+        add_header Cache-Control "public, no-transform";
+    }
+;
+;     # Security headers
+;     add_header X-Frame-Options "SAMEORIGIN";
+;     add_header X-Content-Type-Options "nosniff";
+;     add_header X-XSS-Protection "1; mode=block";
+;     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+;     add_header Referrer-Policy "no-referrer-when-downgrade";
+;     add_header Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; style-src 'self'; img-src 'self' data:; font-src 'self' data:; frame-ancestors 'self'; form-action 'self'; base-uri 'self';";
 }
