--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-multiline-arrays": "^3.0.6",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass-embedded": "^1.77.8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-bundle-analyzer": "^0.0.1"
   }
 }
